# X_Scraper

./: README.md
sentiment_x_analysis/: .gitignore  README.md  pyproject.toml
sentiment_x_analysis/src/sentiment_x_analysis/: crew.py  main.py
sentiment_x_analysis/src/sentiment_x_analysis/config/: agents.yaml  tasks.yaml
sentiment_x_analysis/src/sentiment_x_analysis/tools/: custom_scraper_tool.py  pdf_write.py
