[project]
name = "sentiment_x_analysis"
version = "0.1.0"
description = "sentiment-x-analysis using crewAI"
authors = [{ name = "Aakriti Dhar Dubey", email = "aakriti2144@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
sentiment_x_analysis = "sentiment_x_analysis.main:run"
run_crew = "sentiment_x_analysis.main:run"
train = "sentiment_x_analysis.main:train"
replay = "sentiment_x_analysis.main:replay"
test = "sentiment_x_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
